--- a/style.css
+++ b/style.css
@@ -194,26 +194,22 @@ nav a{
     background-position: center;
     background-size: cover;
 }
-.steps-container{
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
+.parent {
+display: grid;
+grid-template-columns: repeat(5, 1fr);
+grid-template-rows: repeat(5, 1fr);
+grid-column-gap: 0px;
+grid-row-gap: 0px;
 }
-.steps{
-    height: 50%;
-    width: 50%;
-    background-color: black;
-    border-radius: 50%;
-}.s-container{
-     height: 100%;
-     width: 100%;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
 
-}
+.div1 { grid-area: 1 / 1 / 2 / 2;
+background-color: black; }
+.div2 { grid-area: 1 / 2 / 2 / 3; 
+background-color: black;}
+.div3 { grid-area: 2 / 2 / 3 / 3; }
+.div4 { grid-area: 2 / 1 / 3 / 2; }
+.div5 { grid-area: 3 / 2 / 4 / 3; }
+.div6 { grid-area: 3 / 1 / 4 / 2; }
 .contact-section{
     height: 100vh;
     background-image: url(bg1.jpg);
@@ -237,19 +233,93 @@ nav a{
 }
 input{
     padding: 10px 30px;
-    width: 300px;
+   flex: 1;
  
 }.message{
     height: 100%;
     margin-left: 20px;
 }.personalMessage{
-    height: 30%;
-    text-align: start;
+   flex: 1;
 }input, .personalMessage{
     border-radius: 30px;
 }.sendButton{
     padding: 10px 15px;
     border-radius: 30px;
+}
+* {
+  box-sizing: border-box;
+}
+
+
+
+.form-container {
+  max-width: 700px;
+  margin: auto;
+  padding: 20px;
+  border-radius: 8px;
+   width: 100%;
+    background: rgba(255,255,255,0.5);
+    -webkit-backdrop-filter: blur(16px);
+    backdrop-filter: blur(16px);
+    border: 1px solid rgba(255,255,255,0.25);
+  
+}
+
+input, textarea {
+  width: 100%;
+  padding: 12px;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  resize: vertical;
+}
+
+button {
+  background-color: #007BFF;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  width: 100%;
+  font-size: 16px;
+  transition: scale .3s ease-in-out;
+}
+
+button:hover {
+  background-color: #0056b3;
+  transform: scale(1.2);
+}
+
+.row {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.column {
+  flex: 1;
+  min-width: 150px;
+}.try2{
+    display: flex;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+   
+}.featured{
+    max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+  text-align: center;
+}.featured p{
+   font-size: clamp(1rem, 2vw, 1.2rem);
+  line-height: 1.6;
+
+}.featured h1{
+     font-size: clamp(1.5rem, 2.5vw, 2rem);
+  margin-bottom: 10px;
 }
 
 @media screen and (max-width:767px) {
@@ -269,9 +339,11 @@ input{
         background-color: #0077B6;
         border-radius: 10px;
         }
-        
+        .input-container{
+        display: flex;
+        flex-direction: column;
+        }
     }
-
 
         
 @media screen and (min-width:767px) and (max-width:1023px){
