--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     font-family: Arial, Helvetica, sans-serif;
     scroll-behavior: smooth;
 }
+
 nav{
     box-shadow: 3px 3px 5px rgba(0,0,0,0.1);
     background-color:#00B4D8;
@@ -40,6 +41,7 @@ nav a{
     position: static;
     margin-left: 50px;
 }
+
 .sidebar{
     position: fixed;
     top:0;
@@ -60,6 +62,7 @@ nav a{
     font-weight: bold;
     font-size: clamp(1rem, 2.5vw,1.5rem);
 }
+
 
 
 .schoolname{
@@ -174,7 +177,7 @@ nav a{
    text-align: center;
    line-height: 30px;
     height: 100%;
-    width: 60%;
+    width: 100%;
     margin-top: 20%;
 }.featured-container{
    height: 100vh;
@@ -183,7 +186,7 @@ nav a{
    align-items: center;
 }
 .AboutUsText{
-    font-size: clamp(.9rem, 2.5vw, 1.3rem);
+    font-size: 1.3rem;
     margin-top: 20px;
     
 }
@@ -342,6 +345,9 @@ button:hover {
         .input-container{
         display: flex;
         flex-direction: column;
+        }
+        .featured{
+            font-size:12px;
         }
     }
 
