--- a/style.css
+++ b/style.css
@@ -209,22 +209,27 @@ nav a{
     background-position: center;
     background-size: cover;
 }
-.parent {
-display: grid;
-grid-template-columns: repeat(5, 1fr);
-grid-template-rows: repeat(5, 1fr);
-grid-column-gap: 0px;
-grid-row-gap: 0px;
+.steps-container{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.slides{
+   display: grid;
+   grid-template-columns: repeat(3,1fr);
+   gap: 10px;
+
+}
+.slide{
+    background-color: black;
+    height: 300px;
+   
+   
 }
 
-.div1 { grid-area: 1 / 1 / 2 / 2;
-background-color: black; }
-.div2 { grid-area: 1 / 2 / 2 / 3; 
-background-color: black;}
-.div3 { grid-area: 2 / 2 / 3 / 3; }
-.div4 { grid-area: 2 / 1 / 3 / 2; }
-.div5 { grid-area: 3 / 2 / 4 / 3; }
-.div6 { grid-area: 3 / 1 / 4 / 2; }
+
+    
 .contact-section{
     height: 100vh;
     background-image: url(bg1.jpg);
@@ -360,6 +365,12 @@ button:hover {
         }
         .featured{
             font-size:12px;
+        }
+        .slides{
+            flex-direction: column;
+            height: 200px;
+            width: 200px;
+            
         }
     }
 
