--- a/style.css
+++ b/style.css
@@ -341,6 +341,25 @@ button:hover {
      font-size: clamp(1.5rem, 2.5vw, 2rem);
   margin-bottom: 10px;
 }
+.steps-container{
+    align-content: center;
+
+}
+.slides{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+
+}
+.slide{
+    height: 300px;
+   flex-grow: 1;
+    background: rgba(255,255,255,0.5);
+    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(20px);
+    border: 1px solid rgba(255,255,255,0.25);
+}
 
 @media screen and (max-width:767px) {
      .hideOnmobile{
