--- a/style.css
+++ b/style.css
@@ -453,10 +453,29 @@ body * {
 .enroll-list{
     list-style: circle;
 }
-.centered-text{
-   
+footer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    background-color: #00B4D8;
 }
-  
+footer ul{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    list-style: none;
+    width: 100%;
+    height: 50px;
+    
+
+}
+footer ul li a{
+    text-decoration: none;
+    color:black;
+}
+
+
 
     
     
